crates/vexor-compiler/tests/golden/error/input/move_arity.vx
val c = Circle(10)
-- too few arguments
val moved = move(50)(c)
export moved
